* Review your changelog entries
* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[v0.22.5]]
== 0.22.5 (11.10.2018)

icon:plus[] A default paging value can now be configured via the `defaultPageSize` field in the `mesh.yml` file, or the `MESH_DEFAULT_PAGE_SIZE` environment variable.

[[v0.22.4]]
== 0.22.4 (08.10.2018)

icon:check[] REST: The response error code handling for uploads has been updated. Previously no error 413 was returned when the upload limit was reached.

icon:check[] Elasticsearch: The initial sync check will be omitted if no elasticsearch has been configured.

icon:plus[] Plugins: It is now possible to override plugin config in a `config.local.yml` file.

[[v0.22.3]]
== 0.22.3 (20.09.2018)

icon:plus[] It is now possible to add custom languages by configuration.

[[v0.22.2]]
== 0.22.2 (13.09.2018)

icon:check[] Java REST Client: fixed a bug that could lead to duplicate request headers

[[v0.22.1]]
== 0.22.1 (14.08.2018)

icon:plus[] Migration: The micronode and release migration performance has been greatly enhanced.

[[v0.22.0]]
== 0.22.0 (19.07.2018)

icon:bullhorn[] Metadata extraction

[quote]
____
This version of Gentics Mesh introduces the __Metadata extraction__ of file uploads (PDF, Images).
GPS information of images will now be added to the search index. That information can be used to run link:https://getmesh.io/docs/beta/elasticsearch.html#_search_nodes_by_geolocation_of_images[geo search queries].
A detailed description of this feature can be found in our https://getmesh.io/docs/beta/features.html#_metadata_handling[File Uploads Documentation].

Existing binary fields will not be automatically be processed to provide the metadata. You need to manually re-upload the data in order to generate the metadata properties.
____
