@@ -15,6 +15,8 @@
 
 icon:plus[] A default paging value can now be configured via the `defaultPageSize` field in the `mesh.yml` file, or the `MESH_DEFAULT_PAGE_SIZE` environment variable.
 
+icon:check[] Java REST Client: Add more detailed error information to `MeshRestClientMessageException` class.
+
 [[v0.22.4]]
 == 0.22.4 (08.10.2018)
 
